--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+echo "node_modules/" >> .gitignore
+git add .gitignore
+git commit -m "Ignore node_modules"
+git push origin main
